# arxiv-manager

./: .gitignore  AI_CONFIGURATION.md  COMPILATION_SUCCESS_REPORT.md  Cargo.toml  HALLOY_STYLE_IMPLEMENTATION.md  README.md  REFACTOR_TASK7_COMPLETION.md  TODO.md  libmod.rlib  package.json  pdf_test.rs  run_log.txt
docs/: FINAL_SUMMARY.md  PDF_REMOVAL_COMPLETED.md  PROJECT_CLEANUP_COMPLETED.md  PROJECT_REORGANIZATION_COMPLETE.md  README.md  THEME_SWITCHING_COMPLETED.md  TODO.md  UI_MODERNIZATION_COMPLETED.md
docs/archive/: DDD_REFACTOR_PROGRESS.md  FUNCTIONAL_REFACTOR_PLAN.md
docs/reports/: DEVELOPMENT_STATUS_REPORT.md  FINAL_PROJECT_STATUS.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE_REPORT.md
src/: app_state.rs  appearance.rs  lib.rs  main.rs  messages.rs  models.rs  services.rs  style.rs  theme.rs  views.rs
src/ai/: ai_analyzer.rs  ai_assistant.rs  ai_handler.rs  ai_models.rs  ai_service.rs  ai_suggestions.rs  copilot_integration.rs  mod.rs
src/app/: mod.rs  mod_old.rs  state.rs
src/appearance/: theme.rs
src/appearance/theme/: button.rs  container.rs  pane_grid.rs  scrollable.rs  text.rs
src/application/: commands.rs  dto.rs  handlers.rs  mod.rs  queries.rs  use_cases.rs
src/config/: mod.rs
src/core/: api_client.rs  app_state.rs  app_state_clean.rs  app_state_old_763_lines.rs  app_state_refactored.rs  arxiv_api.rs  messages.rs  mod.rs  models.rs  parser.rs  session.rs  types.rs
src/core/events/: download_events.rs  mod.rs  search_events.rs  ui_events.rs
src/core/handlers/: collection_handler.rs  command_handler.rs  download_handler.rs  library_handler.rs  mod.rs  paper_handler.rs  search_handler.rs  settings_handler.rs  shortcut_handler.rs  tab_handler.rs
src/core/models/: collection.rs  mod.rs  paper.rs  search.rs  settings.rs  ui.rs
src/core/state/: download_state.rs  mod.rs  search_state.rs  ui_state.rs
src/database/: migrations.rs  mod.rs  models.rs
src/database/connection/: mod.rs  pool.rs
src/database/migrations/: mod.rs
src/database/migrations/schema/: 001_initial_papers.sql  002_download_status_index.sql  003_fulltext_search.sql
src/database/models/: download_status.rs  mod.rs  paper_record.rs
src/database/operations/: collection_ops.rs  create.rs  delete.rs  mod.rs  paper_ops.rs  read.rs  schema.rs  search_ops.rs  update.rs
src/domains/: mod.rs
src/domains/paper/: events.rs  mod.rs  models.rs  repositories.rs  services.rs
src/downloader/: download_manager.rs  download_task.rs  manager.rs  mod.rs  mod_backup.rs  queue.rs  types.rs  utils.rs
src/pdf/: mod.rs  page_cache.rs  page_cache_new.rs  pdf_processor.rs  renderer.rs  renderer_new.rs  renderer_old.rs  renderer_real.rs  search.rs  search_new.rs  search_old.rs  text_extractor.rs  viewer.rs
src/search/: downloader.rs  mod.rs  search_engine.rs  services.rs
src/search/api/: client.rs  mod.rs  query_builder.rs
src/search/filters/: date_filter.rs  mod.rs
src/search/parsers/: mod.rs  xml_parser.rs
src/ui/: app.rs  downloads.rs  library.rs  main_view.rs  mod.rs  search.rs  settings.rs  simple.rs  style.rs  theme.rs  view.rs  views.rs
src/ui/components/: ai_assistant_panel.rs  ai_assistant_panel_simple.rs  ai_suggestions_widget.rs  command_palette.rs  context_menu.rs  copilot_panel.rs  download_item.rs  downloads_view.rs  emoji_text.rs  library_view.rs  mod.rs  paper_card.rs  reader_view.rs  search_view.rs  settings_view.rs  sidebar.rs  status_bar.rs  tab_bar.rs  waterfall.rs
src/ui/views/: downloads.rs  library.rs  mod.rs  paper.rs  search.rs  settings_backup.rs
src/ui/views/settings/: appearance.rs  downloads.rs  mod.rs  shortcuts.rs
src/ui/views/settings/components/: mod.rs  setting_row.rs  settings_section.rs
src/utils/: config_utils.rs  date_utils.rs  error.rs  file_utils.rs  mod.rs  string_utils.rs  validation.rs
