[package]
name = "arxiv-manager"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive arXiv paper management tool with GUI"
license = "MIT"
repository = "https://github.com/yourusername/arxiv-manager"
keywords = ["arxiv", "papers", "academic", "research", "management"]
categories = ["science", "gui"]

[dependencies]
# GUI Framework
iced = { version = "0.10", features = ["tokio", "advanced"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for arXiv API
reqwest = { version = "0.11", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# PDF processing
pdf = "0.8"

# Full-text search
tantivy = "0.22"

# File system operations
walkdir = "2.3"

# Configuration
config = "0.13"
dirs = "5.0"

# Additional dependencies for new modules
regex = "1.9"
url = "2.4"
toml = "0.7"
uuid = { version = "1.4", features = ["v4"] }
futures-util = "0.3"

# Git integration
git2 = "0.17"

# XML parsing for arXiv API
quick-xml = { version = "0.30", features = ["serialize"] }

# Progress tracking
indicatif = "0.17"

# Unicode normalization
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "arxiv-manager"
path = "src/main.rs"
