[package]
name = "arxiv-manager"
version = "0.1.0"
edition = "2021"
authors = ["koishi"]
description = "A comprehensive arXiv paper management tool"
license = "MIT"

[[bin]]
name = "arxiv_manager"
path = "src/main.rs"

[dependencies]
# GUI Framework
iced = { version = "0.13.0", features = ["tokio", "svg", "image", "advanced"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
toml = "0.8"

# Image processing
image = "0.24"

# Search engine
tantivy = "0.22"

# File utilities
dirs = "5.0"
uuid = { version = "1.8", features = ["v4"] }

# Error handling
anyhow = "1.0"

# System integration
open = "5.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Git integration
git2 = "0.18"

# XML parsing for arXiv API
roxmltree = "0.19"
quick-xml = "0.36"
serde-xml-rs = "0.6"

# URL manipulation
url = "2.5"
urlencoding = "2.1"

# Futures utilities
futures = "0.3"

# AI and Language Model Integration
reqwest-eventsource = "0.6"
async-openai = "0.27"
markdown = "1.0"

# Language Server Protocol for GitHub Copilot integration
tower-lsp = "0.20"
lsp-types = "0.94"
lsp-server = "0.7"
serde_path_to_error = "0.1"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.10"
